feat(landing page): UX/UI fixed, menu top fixed, responsive layout

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -132,7 +132,7 @@
             <p><a routerLink="../voluntario-global">Voluntário Global</a></p>
             <p><a href="http://aiesec.org.br/hospede-um-intercambista/">Hospede um intercambista</a></p>
           </div>
-          <div class="footer-group-links col-md-4 col-sm-6">
+          <div class="footer-group-links col-md-4 col-sm-6 desktop">
             <p class="semibold footer-link-title">Seja parceiro</p>
             <p><a href="http://blog.aiesec.org.br/seja-parceiro/ong/">ONG</a></p>
             <p><a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">Empresas</a></p>
@@ -141,13 +141,19 @@
       </div>
       <div class="footer-links col-md-6">
         <div class="row">
+          <div class="footer-group-links col-md-3 col-sm-6 mobile">
+            <p class="semibold footer-link-title">Seja parceiro</p>
+            <p><a href="http://blog.aiesec.org.br/seja-parceiro/ong/">ONG</a></p>
+            <p><a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">Empresas</a></p>
+          </div>
           <div class="footer-group-links col-md-3 col-sm-6">
             <p class="semibold footer-link-title">Blog</p>
             <p><a href="http://business.aiesec.org.br/">Business</a></p>
             <p><a href="http://aiesec.blog.br/">Estudantes</a></p>
           </div>
-          <div class="footer-group-links col-md-3 col-sm-6">
-            <p class="semibold footer-link-title"><a href="http://blog.aiesec.org.br/contato/">Contato</a></p>
+          <div class="footer-group-links col-md-3 col-sm-12" id="label-contact">
+            <p class="semibold footer-link-title desktop"><a href="http://blog.aiesec.org.br/contato/">Contato</a></p>
+            <p class="semibold footer-link-title mobile"><a href="http://blog.aiesec.org.br/contato/">Entre em contato com a gente</a></p>
           </div>
           <div class="footer-social-networks col-md-6 col-sm-6">
             <a target="_blank" href="https://www.facebook.com/AIESECinBrazil/"><i class="fab fa-facebook-square"></i></a>
