--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -2,8 +2,10 @@
 <section class="header-product" id="header-product">
   <div class="header-product-image {{actualPage}}"></div>
   <div class="container">
-    <div class="row header-menu">
-      <div class="logo-aiesec col-sm-3" (click)="returnHome()"></div>
+    <div class="row header-menu" id="fixedMenu">
+      <div class="col-sm-3" (click)="returnHome()">
+        <div class='logo-aiesec'></div>
+      </div>
       <div class="menu-product col-sm-9">
         <div class="responsive-menu">
           <div class='menu-icon' (click)="toggleResponsiveMenu()">
