--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -127,7 +127,7 @@
                     </div>
 
                     <i class="fas fa-gift mobile mobile-icon"></i>
-                    <input class="form-control p-inputMask gv" id="inputDatadeNascimento" (onBlur)="checkDate()" placeholder="{{ placeholderBirthdate }}"
+                    <input class="form-control p-inputMask gv" id="inputDatadeNascimento" formControlName="birthdate" (onBlur)="checkDate()" placeholder="{{ placeholderBirthdate }}"
                     [(ngModel)]="user.birthdate" name="birthdate" mask="00/00/0000"/>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
