--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -1099,6 +1099,12 @@ label {
   --------------------------------------------------------------*/
 
 @media (max-width: 600px) {
+    #inputDatadeNascimento{
+        font-size: 16px;
+        font-weight: lighter;
+        font-family: "Lato", sans-serif;
+        text-align: left;
+    }
     //prime 
     ::ng-deep .p-inputMask input {
         text-align: left;
