fix(maskcss): apply style all forms

--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -1086,11 +1086,21 @@ label {
     }
 }
 
+
+#inputDatadeNascimento{
+    font-size: 16px;
+    font-weight: lighter;
+    font-family: "Lato", sans-serif;
+}
+
 /*--------------------------------------------------------------
       Responsive Styles - Max 600px
   --------------------------------------------------------------*/
 
 @media (max-width: 600px) {
+    #inputDatadeNascimento{
+        text-align: left;
+    }
     //prime 
     ::ng-deep .p-inputMask input {
         text-align: left;
