--- a/src/app/form-gt/form-gt.component.scss
+++ b/src/app/form-gt/form-gt.component.scss
@@ -1085,11 +1085,21 @@ label {
     }
 }
 
+#inputDatadeNascimento{
+    font-size: 16px;
+    font-weight: lighter;
+    font-family: "Lato", sans-serif;
+}
+
+
 /*--------------------------------------------------------------
       Responsive Styles - Max 600px
   --------------------------------------------------------------*/
 
 @media (max-width: 600px) {
+    #inputDatadeNascimento{
+        text-align: left;
+    }
     //prime 
     ::ng-deep .p-inputMask input {
         text-align: left;
