--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -4,100 +4,19 @@
     <div class="row">
       <div class="col-md-12 col-sm-12">
         <h1 class="centered italic">Os nossos parceiros premium</h1>
-        <div class="footer-carousel">
-          <!-- <landing-footer-carousel></landing-footer-carousel> -->
-          <ngb-carousel class="partners-carousel" #footercarousel *ngIf="partners">
-            <ng-template ngbSlide>
-              <div class="partners-flex">
-                <div class="partners-item">
-                  <a (click)="navTo(partners.assistcard.site)">
-                    <img [src]="partners.assistcard.img" alt="Random first slide">
-                  </a>
-                </div>
-                <div class="partners-item">
-                  <a (click)="navTo(partners.delivery_much.site)">
-                    <img [src]="partners.delivery_much.img" alt="Random first slide">
-                  </a>
-                </div>
-                <div class="partners-item">
-                  <a (click)="navTo(partners.dhl.site)">
-                    <img [src]="partners.dhl.img" alt="Random first slide">
-                  </a>
-                </div>
-                <div class="partners-item">
-                  <a (click)="navTo(partners.electrolux.site)">
-                    <img [src]="partners.electrolux.img" alt="Random first slide">
-                  </a>
-                </div>
-                <div class="partners-item">
-                  <a (click)="navTo(partners.hyva.site)">
-                    <img [src]="partners.hyva.img" alt="Random first slide">
-                  </a>
-                </div>
+        <div id="footer-carousel">
+            <div class="buttons-carousel">
+                <i (click)="moveLeft()" class="fas fa-chevron-left"></i>
               </div>
-            </ng-template>
-            <ng-template ngbSlide>
-              <div class="partners-flex">
-                <div class="partners-item">
-                  <a (click)="navTo(partners.leroymerlin.site)">
-                    <img [src]="partners.leroymerlin.img" alt="Random first slide">
-                  </a>
-                </div>
-                <div class="partners-item">
-                  <a (click)="navTo(partners.mckinseyecompany.site)">
-                    <img [src]="partners.mckinseyecompany.img" alt="Random first slide">
-                  </a>
-                </div>
-                <div class="partners-item">
-                  <a (click)="navTo(partners.mondelez.site)">
-                    <img [src]="partners.mondelez.img" alt="Random first slide">
-                  </a>
-                </div>
-                <div class="partners-item">
-                  <a (click)="navTo(partners.nestle.site)">
-                    <img [src]="partners.nestle.img" alt="Random first slide">
-                  </a>
-                </div>
-                <div class="partners-item">
-                  <a (click)="navTo(partners.nokia.site)">
-                    <img [src]="partners.nokia.img" alt="Random first slide">
-                  </a>
-                </div>
+          <div class='footer-carousel-partners'>
+            <div class="footer-carousel-wrapper">
+              <div class="footer-each-item" *ngFor="let partner of partners" (click)="openUrl(partner.site)">
+                <img src="{{partner.img}}" alt="{{title}}">
               </div>
-            </ng-template>
-            <ng-template ngbSlide>
-              <div class="partners-flex">
-                <div class="partners-item">
-                  <a (click)="navTo(partners.resultadosdigitais.site)">
-                    <img [src]="partners.resultadosdigitais.img" alt="Random first slide">
-                  </a>
-                </div>
-                <div class="partners-item">
-                  <a (click)="navTo(partners.sap.site)">
-                    <img [src]="partners.sap.img" alt="Random first slide">
-                  </a>
-                </div>
-                <div class="partners-item">
-                  <a (click)="navTo(partners.votorantimcimentos.site)">
-                    <img [src]="partners.votorantimcimentos.img" alt="Random first slide">
-                  </a>
-                </div>
-                <div class="partners-item">
-                  <a (click)="navTo(partners.Whirlpoow.site)">
-                    <img [src]="partners.Whirlpoow.img" alt="Random first slide">
-                  </a>
-                </div>
-                <div class="partners-item">
-                  <a (click)="navTo(partners.assistcard.site)">
-                    <img [src]="partners.assistcard.img" alt="Random first slide">
-                  </a>
-                </div>
-              </div>
-            </ng-template>
-          </ngb-carousel>
-          <div class="partners-carousel">
-            <i (click)="prev()" class="partners-next fas fa-chevron-left"></i>
-            <i (click)="next()" class="partners-prev fas fa-chevron-right"></i>
+            </div>
+          </div>
+          <div class="buttons-carousel">
+            <i (click)="moveRight()" class="fas fa-chevron-right"></i>
           </div>
         </div>
       </div>
@@ -120,22 +39,42 @@
         <div class="row">
           <div class="footer-group-links col-md-4 col-sm-6">
             <p class="semibold footer-link-title">Institucional</p>
-            <p><a href="http://blog.aiesec.org.br/a-aiesec/">A AIESEC</a></p>
-            <p><a href="http://blog.aiesec.org.br/faca-parte/">Faça parte</a></p>
-            <p><a href="http://blog.aiesec.org.br/alumni/">Alummi</a></p>
-            <p><a href="http://blog.aiesec.org.br/youthspeak/">YouthSpeak</a></p>
+            <p>
+              <a href="http://blog.aiesec.org.br/a-aiesec/">A AIESEC</a>
+            </p>
+            <p>
+              <a href="http://blog.aiesec.org.br/faca-parte/">Faça parte</a>
+            </p>
+            <p>
+              <a href="http://blog.aiesec.org.br/alumni/">Alummi</a>
+            </p>
+            <p>
+              <a href="http://blog.aiesec.org.br/youthspeak/">YouthSpeak</a>
+            </p>
           </div>
           <div class="footer-group-links col-md-4 col-sm-6">
             <p class="semibold footer-link-title">Institucional</p>
-            <p><a routerLink="../empreendedor-global">Empreendedor Global</a></p>
-            <p><a routerLink="../talento-global">Talento Global</a></p>
-            <p><a routerLink="../voluntario-global">Voluntário Global</a></p>
-            <p><a href="http://aiesec.org.br/hospede-um-intercambista/">Hospede um intercambista</a></p>
+            <p>
+              <a routerLink="../empreendedor-global">Empreendedor Global</a>
+            </p>
+            <p>
+              <a routerLink="../talento-global">Talento Global</a>
+            </p>
+            <p>
+              <a routerLink="../voluntario-global">Voluntário Global</a>
+            </p>
+            <p>
+              <a href="http://aiesec.org.br/hospede-um-intercambista/">Hospede um intercambista</a>
+            </p>
           </div>
           <div class="footer-group-links col-md-4 col-sm-6 desktop">
             <p class="semibold footer-link-title">Seja parceiro</p>
-            <p><a href="http://blog.aiesec.org.br/seja-parceiro/ong/">ONG</a></p>
-            <p><a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">Empresas</a></p>
+            <p>
+              <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">ONG</a>
+            </p>
+            <p>
+              <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">Empresas</a>
+            </p>
           </div>
         </div>
       </div>
@@ -143,23 +82,43 @@
         <div class="row">
           <div class="footer-group-links col-md-3 col-sm-6 mobile">
             <p class="semibold footer-link-title">Seja parceiro</p>
-            <p><a href="http://blog.aiesec.org.br/seja-parceiro/ong/">ONG</a></p>
-            <p><a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">Empresas</a></p>
+            <p>
+              <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">ONG</a>
+            </p>
+            <p>
+              <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">Empresas</a>
+            </p>
           </div>
           <div class="footer-group-links col-md-3 col-sm-6">
             <p class="semibold footer-link-title">Blog</p>
-            <p><a href="http://business.aiesec.org.br/">Business</a></p>
-            <p><a href="http://aiesec.blog.br/">Estudantes</a></p>
+            <p>
+              <a href="http://business.aiesec.org.br/">Business</a>
+            </p>
+            <p>
+              <a href="http://aiesec.blog.br/">Estudantes</a>
+            </p>
           </div>
           <div class="footer-group-links col-md-3 col-sm-12" id="label-contact">
-            <p class="semibold footer-link-title desktop"><a href="http://blog.aiesec.org.br/contato/">Contato</a></p>
-            <p class="semibold footer-link-title mobile"><a href="http://blog.aiesec.org.br/contato/">Entre em contato com a gente</a></p>
+            <p class="semibold footer-link-title desktop">
+              <a href="http://blog.aiesec.org.br/contato/">Contato</a>
+            </p>
+            <p class="semibold footer-link-title mobile">
+              <a href="http://blog.aiesec.org.br/contato/">Entre em contato com a gente</a>
+            </p>
           </div>
           <div class="footer-social-networks col-md-6 col-sm-6">
-            <a target="_blank" href="https://www.facebook.com/AIESECinBrazil/"><i class="fab fa-facebook-square"></i></a>
-            <a target="_blank" href="https://instagram.com/aiesecnobrasil"><i class="fab fa-instagram"></i></a>
-            <a target="_blank" href="https://twitter.com/AIESECBrasil"><i class="fab fa-twitter"></i></a>
-            <a target="_blank" href="https://www.youtube.com/user/AIESECinBrazil/"><i class="fab fa-youtube"></i></a>
+            <a target="_blank" href="https://www.facebook.com/AIESECinBrazil/">
+              <i class="fab fa-facebook-square"></i>
+            </a>
+            <a target="_blank" href="https://instagram.com/aiesecnobrasil">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a target="_blank" href="https://twitter.com/AIESECBrasil">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a target="_blank" href="https://www.youtube.com/user/AIESECinBrazil/">
+              <i class="fab fa-youtube"></i>
+            </a>
           </div>
         </div>
       </div>
