--- a/src/app/landing-footer/landing-footer.component.scss
+++ b/src/app/landing-footer/landing-footer.component.scss
@@ -1,341 +1,347 @@
 @import "../../scss/global.scss";
-
 $break-md: 768px;
 $break-sm: 576px;
-
 .mobile {
-  display:none;
+    display: none;
 }
+
 .desktop {
-  display: block;
+    display: block;
 }
+
 .partners {
-  &.margin-top-and-bottom {
-    margin: 75px auto 0 auto !important
-  }
-  .row > div {
-    height: 250px;
-  }
-  h1 {
-    padding-bottom: 40px;
-  }
-  .footer-carousel {
-    .carousel{
-      outline: 0 !important;
+    &.margin-top-and-bottom {
+        margin: 75px auto 0 auto !important
     }
-    .partners-carousel{
-      width: 95%;
-      margin: auto;
+    .row>div {
+        height: 250px;
     }
-    .partners-flex{
-      display: flex;
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-      flex-direction: row;
-      -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-      margin: 1.5% auto;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;      
-      .partners-item{
-        padding: 0 3px;        
-        a{
-          cursor: pointer;
-          img{
-            width: 100%;
-          }
+    h1 {
+        padding-bottom: 40px;
+    }
+    #footer-carousel {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        flex-wrap: nowrap;
+        .buttons-carousel {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 35px;
+            color: $default;
+            font-size: 35px;
+            cursor: pointer;
+            transition: .3s;
+            &:hover {
+                transform: scale(1.05);
+                cursor: pointer;
+            }
         }
-      }
+        .footer-carousel-partners {
+            width: 85%;
+            min-height: 120px;
+            position: relative;
+            overflow: hidden;
+            .footer-carousel-wrapper {
+                height: 100%;
+                width: 300%;
+                position: absolute;
+                left: 0;
+                top: 0;
+                .footer-each-item {
+                    width: 6%;
+                    height: 100px;
+                    background-color: #FBFBFB;
+                    margin: 10px .325%;
+                    box-sizing: box-shadow;
+                    float: left;
+                    position: Relative;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    transition: .3s;
+                    cursor: pointer;
+                    &:hover {
+                        transform: scale(1.05);
+                    }
+                    img {
+                        max-width: 75%;
+                    }
+                }
+            }
+        }
     }
-    .partners-next{
-      color:#037ef3;
-      font-size: 25px;
-      padding: 35px 10px;
-      position: relative;
-      cursor: pointer;
-      float: left;
-      top: -76px;
-      left: -25px;
+    .partners-next {
+        color: #037ef3;
+        font-size: 25px;
+        padding: 35px 10px;
+        position: relative;
+        cursor: pointer;
+        float: left;
+        top: -76px;
+        left: -25px;
     }
-
-    .partners-prev{
-      color: #037ef3;
-      font-size: 25px;
-      padding: 35px 10px;
-      position: relative;
-      cursor: pointer;
-      float: right;
-      top: -76px;
-      right: -25px;
+    .partners-prev {
+        color: #037ef3;
+        font-size: 25px;
+        padding: 35px 10px;
+        position: relative;
+        cursor: pointer;
+        float: right;
+        top: -76px;
+        right: -25px;
     }
-  }
 }
-
 
 footer {
-  .footer-logo {
-    width: 300px;
-    margin: auto;
-    img {
-      margin: 0 auto;
-      display: block; 
+    .footer-logo {
+        width: 300px;
+        margin: auto;
+        img {
+            margin: 0 auto;
+            display: block;
+        }
+        p {
+            line-height: 20px;
+            padding-top: 20px;
+        }
     }
-    p {
-      line-height: 20px;
-      padding-top: 20px;
+    hr {
+        border-top: 1px solid rgba(255, 255, 255, 0.63);
     }
-  }
-  
-  hr {
-    border-top: 1px solid rgba(255, 255, 255, 0.63);
-  }
-
-  .footer-links {
-    .footer-group-links {
-      .footer-link-title {
-        padding-bottom: 10px;
-      }
+    .footer-links {
+        .footer-group-links {
+            .footer-link-title {
+                padding-bottom: 10px;
+            }
+        }
+        .footer-social-networks {
+            display: flex;
+            justify-content: space-between;
+            i {
+                color: $white;
+                font-size: 22px;
+                transition: .4s;
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                align-items: center;
+                justify-content: center;
+                display: flex;
+                &:hover {
+                    background-color: $white;
+                    transform: scale(1.1)
+                }
+                &.fa-facebook-square:hover {
+                    color: #475993;
+                }
+                &.fa-instagram:hover {
+                    color: #c536a4;
+                }
+                &.fa-twitter:hover {
+                    color: #55acee;
+                }
+                &.fa-youtube:hover {
+                    color: #f61c0d;
+                }
+            }
+        }
     }
-
-    .footer-social-networks {
-      display: flex;
-      justify-content: space-between;
-      i {
+    .footer-copyright {
+        position: relative;
+        bottom: -70px;
+        p {
+            text-align: center;
+        }
+    }
+    &.bg-footer {
+        background: url('../../assets/images/bg-footer.jpg') no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        box-shadow: inset 0 0 0 1000px rgba(3, 126, 243, 0.85)
+    }
+    a,
+    a:hover {
         color: $white;
-        font-size: 22px;
-        transition: .4s;
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        align-items: center;
-        justify-content: center;
-        display: flex;
-        &:hover {
-          background-color: $white;
-          transform: scale(1.1)
-        }
-        &.fa-facebook-square:hover {
-          color:#475993;
-        }
-        &.fa-instagram:hover {
-          color:#c536a4;
-        }
-        &.fa-twitter:hover {
-          color:#55acee;
-        }
-        &.fa-youtube:hover {
-          color:#f61c0d;
-        }
-      }
+        text-decoration: none;
     }
-  }
-
-  .footer-copyright {
-    position: relative;
-    bottom: -70px;
-    p {
-      text-align: center;
+    a:hover {
+        font-weight: bold;
     }
-  }
-
-  &.bg-footer {
-    background: url('../../assets/images/bg-footer.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    box-shadow: inset 0 0 0 1000px rgba(3, 126, 243, 0.85)
-  }
-
-  a, a:hover {
-    color: $white;
-    text-decoration: none;
-  }
-
-  a:hover {
-    font-weight: bold;
-  }
 }
 
-
 @media only screen and (max-width: $break-md) {
-  .remove-mobile {
-    display: none;
-  }
-  .mobile {
-    display:block;
-  }
-  .desktop {
-    display: none;
-  }
-  footer {
-    .footer-links {
-      .footer-group-links {
-        padding-bottom: 20px;
-        width: 47.5% !important
-      }
+    .footer-carousel-partners {
+        width: 100%;
     }
-    #label-contact {
-      width: 100% !important;
-      padding-bottom: 5px;
+    .remove-mobile {
+        display: none;
     }
-  }
-
-  footer.padding-top-and-bottom {
-    padding: 10px 0 !important;
-    .footer-copyright {
-      bottom: 0;
-      padding: 25px 0;
+    .mobile {
+        display: block;
     }
-  }
-
-  .footer-social-networks {
-    justify-content: space-evenly;
-    i {
-      margin: 0px 8px;
+    .desktop {
+        display: none;
     }
-  }
-
-
+    footer {
+        .footer-links {
+            .footer-group-links {
+                padding-bottom: 20px;
+                width: 47.5% !important
+            }
+        }
+        #label-contact {
+            width: 100% !important;
+            padding-bottom: 5px;
+        }
+    }
+    footer.padding-top-and-bottom {
+        padding: 10px 0 !important;
+        .footer-copyright {
+            bottom: 0;
+            padding: 25px 0;
+        }
+    }
+    .footer-social-networks {
+        justify-content: space-evenly;
+        i {
+            margin: 0px 8px;
+        }
+    }
 }
 
 @media only screen and (max-width: $break-sm) {
-  footer {
-    .footer-links {
-      p {
-        text-align: center;
-        line-height: 25.5px;
-      }
-    }
-  }
-}
-
-@media only screen and (min-width: 390px){
-  .partners{
-    .footer-carousel{
-      .partners-next{
-        top: -83px;
-      }
-
-      .partners-prev{
-        top: -83px;
-      }
-    }
-    .bg-footer {
-      .bg-footer-group {
-        .footer-group-links {
-          width: 50%;
+    footer {
+        .footer-links {
+            p {
+                text-align: center;
+                line-height: 25.5px;
+            }
         }
-      }
     }
-  }
 }
 
-@media only screen and (min-width: 449px){
-  .partners{
-    .footer-carousel{
-      .partners-next{
-        top: -83px;
-      }
-
-      .partners-prev{
-        top: -83px;
-      }
-    }
-  }
-}
-
-@media only screen and (min-width: 475px){
-  .partners{
-    .footer-carousel{
-      .partners-next{
-        top: -88px;
-      }
-
-      .partners-prev{
-        top: -88px;
-      }
-    }
-  }
-}
-
-@media only screen and (min-width: 520px){
-  .partners{
-    .footer-carousel{
-      .partners-next{
-        top: -97px;
-      }
-
-      .partners-prev{
-        top: -97px;
-      }
-    }
-  }
-}
-
-@media only screen and (min-width: 576px){
-  .partners{
-    .footer-carousel{
-      .partners-carousel{
-        width: 470px;
-      }
-      .partners-flex{
-        .partners-item{
-          padding: 0 5px;
+@media only screen and (min-width: 390px) {
+    .partners {
+        .footer-carousel {
+            .partners-next {
+                top: -83px;
+            }
+            .partners-prev {
+                top: -83px;
+            }
         }
-      }
-      .partners-next{
-        top: -97px;
-      }
-
-      .partners-prev{
-        top: -97px;
-      }
+        .bg-footer {
+            .bg-footer-group {
+                .footer-group-links {
+                    width: 50%;
+                }
+            }
+        }
     }
-  }
 }
 
-@media only screen and (min-width: 768px){
-  .partners{
-    .footer-carousel{
-      .partners-carousel{
-        width: 580px;
-      }
-      .partners-flex{
-        .partners-item{
-          padding: 0 8px;
+@media only screen and (min-width: 449px) {
+    .partners {
+        .footer-carousel {
+            .partners-next {
+                top: -83px;
+            }
+            .partners-prev {
+                top: -83px;
+            }
         }
-      }
-      .partners-next{
-        top: -103px;
-      }
-
-      .partners-prev{
-        top: -103px;
-      }
     }
-  }
 }
 
-@media only screen and (min-width: 992px){
-  .partners{
-    .footer-carousel{
-      .partners-carousel{
-        width: 700px;
-      }
-      .partners-flex{
-        .partners-item{
-          padding: 0 20px;
+@media only screen and (min-width: 475px) {
+    .partners {
+        .footer-carousel {
+            .partners-next {
+                top: -88px;
+            }
+            .partners-prev {
+                top: -88px;
+            }
         }
-      }
-      .partners-next{
-        top: -102px;
-      }
-
-      .partners-prev{
-        top: -102px;
-      }
     }
-  }
+}
+
+@media only screen and (min-width: 520px) {
+    .partners {
+        .footer-carousel {
+            .partners-next {
+                top: -97px;
+            }
+            .partners-prev {
+                top: -97px;
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 576px) {
+    .partners {
+        .footer-carousel {
+            .partners-carousel {
+                width: 470px;
+            }
+            .partners-flex {
+                .partners-item {
+                    padding: 0 5px;
+                }
+            }
+            .partners-next {
+                top: -97px;
+            }
+            .partners-prev {
+                top: -97px;
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .partners {
+        .footer-carousel {
+            .partners-carousel {
+                width: 580px;
+            }
+            .partners-flex {
+                .partners-item {
+                    padding: 0 8px;
+                }
+            }
+            .partners-next {
+                top: -103px;
+            }
+            .partners-prev {
+                top: -103px;
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .partners {
+        .footer-carousel {
+            .partners-carousel {
+                width: 700px;
+            }
+            .partners-flex {
+                .partners-item {
+                    padding: 0 20px;
+                }
+            }
+            .partners-next {
+                top: -102px;
+            }
+            .partners-prev {
+                top: -102px;
+            }
+        }
+    }
 }
