--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -260,9 +260,10 @@
           <div class="footer-carousel-btn-left">
             <i (click)="moveLeft()" class="fas fa-chevron-left"></i>
           </div>
-          <div class="footer-carousel">
-            <drag-scroll class="carousel" #nav scrollbar-hidden="true" drag-scroll-y-disabled="true">
-              <a routerLink="/voluntario-global" class="animated fadeIn faster" *ngIf="actual == 1">
+
+          <div class="carousel-container" (click)="goToGv()">
+            <div class='carousel-wrapper'>  
+              <div class="each-carousel-item">
                 <div class="cases case-1" drag-scroll-item>
                   <div class="box-case-bg"></div>
                   <div class="box-case box-case-gv">
@@ -281,51 +282,52 @@
                     </ul>
                   </div>
                 </div>
-              </a>
-              <a routerLink="/empreendedor-global" class="animated fadeIn faster" *ngIf="actual == 2">
-                <div class="cases case-2" drag-scroll-item>
-                  <div class="box-case-bg"></div>
-                  <div class="box-case">
-                    <div class="logo-product ge"></div>
-                    <p class='product-story-info'>
-                      "Meu intercâmbio no Egito definiu muito do que será minha carreira daqui pra frente. Além de aprender muito na Startup que
-                      eu trabalhei, também participei de um ambiente de trabalho muito multicultural! Foi uma experiência
-                      inesquecível."
-                    </p>
-                    <span>
-                      João Diogo Brites
-                    </span>
-                    <ul>
-                      <li></li>
-                      <li class="active"></li>
-                      <li></li>
-                    </ul>
-                  </div>
-                </div>
-
-              </a>
-              <a routerLink="/talento-global" class="animated fadeIn faster" *ngIf="actual == 3">
-                <div class="cases case-3" drag-scroll-item>
-                  <div class="box-case-bg"></div>
-                  <div class="box-case">
-                    <div class="logo-product gt"></div>
-                    <p class='product-story-info'>
-                      "Fazer meu intercâmbio na Índia foi com certeza a experiência que eu mais de desafiei e desenvolvi, tanto profissionalmente
-                      quanto pessoalmente. Meu ano lá foi um divisor de águas na minha carreira e pra pessoa que sou hoje!"
-                    </p>
-                    <span>
-                      Amanda Peconick
-                    </span>
-                    <ul>
-                      <li></li>
-                      <li></li>
-                      <li class="active"></li>
-                    </ul>
-                  </div>
-                </div>
-              </a>
-            </drag-scroll>
+              </div>
+              <div class="each-carousel-item" (click)="goToGe()">
+                  <div class="cases case-2" drag-scroll-item>
+                      <div class="box-case-bg"></div>
+                      <div class="box-case">
+                        <div class="logo-product ge"></div>
+                        <p class='product-story-info'>
+                          "Meu intercâmbio no Egito definiu muito do que será minha carreira daqui pra frente. Além de aprender muito na Startup que
+                          eu trabalhei, também participei de um ambiente de trabalho muito multicultural! Foi uma experiência
+                          inesquecível."
+                        </p>
+                        <span>
+                          João Diogo Brites
+                        </span>
+                        <ul>
+                          <li></li>
+                          <li class="active"></li>
+                          <li></li>
+                        </ul>
+                      </div>
+                    </div>
+              </div>
+              <div class="each-carousel-item" (click)="goToGt()">
+                  <div class="cases case-3" drag-scroll-item>
+                      <div class="box-case-bg"></div>
+                      <div class="box-case">
+                        <div class="logo-product gt"></div>
+                        <p class='product-story-info'>
+                          "Fazer meu intercâmbio na Índia foi com certeza a experiência que eu mais de desafiei e desenvolvi, tanto profissionalmente
+                          quanto pessoalmente. Meu ano lá foi um divisor de águas na minha carreira e pra pessoa que sou hoje!"
+                        </p>
+                        <span>
+                          Amanda Peconick
+                        </span>
+                        <ul>
+                          <li></li>
+                          <li></li>
+                          <li class="active"></li>
+                        </ul>
+                      </div>
+                    </div>
+              </div>
+            </div>
           </div>
+
+          
           <div class="footer-carousel-btn-right">
             <i (click)="moveRight()" class="fas fa-chevron-right"></i>
           </div>
