--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -250,7 +250,7 @@
       </div>
     </div>
   </section>
-  <div id="our-stories">
+  <div id="our-stories" (mouseenter)="stopAnimation()" (mouseleave)="sliderAnimation()">
     <div id="our-stories-bg"></div>
     <section class="container padding align-center our-stories">
       <h1 class='italic centered'>As nossas histórias</h1>
