--- a/src/app/landing-footer/landing-footer.component.scss
+++ b/src/app/landing-footer/landing-footer.component.scss
@@ -10,14 +10,41 @@ $break-sm: 576px;
 }
 
 .partners {
-    &.margin-top-and-bottom {
-        margin: 75px auto 0 auto !important
+    background-color: #6071BE;
+    position: relative;
+    padding-top: 100px;
+    &.padding-top-and-bottom {
+        padding: 100px 0 45px 0 !important;
     }
-    .row>div {
-        height: 250px;
+    .partners-pattern {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background-image: url('../../assets/images/pattern4.png');
+        background-size: 350px;
+        background-position: bottom center;
+        opacity: .125
     }
     h1 {
-        padding-bottom: 40px;
+        color: #fff;
+        margin: 0 auto 20px auto;
+    }
+    .partner-icon-hanshake {
+        margin: auto;
+        display: block;
+        border-radius: 50%;
+        position: absolute;
+        width: 115px;
+        height: 115px;
+        left: 50%;
+        margin-left: -52.5px;
+        top: -45px;
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-image: url('../../assets/images/icon-handshake.png');
     }
     #footer-carousel {
         display: flex;
@@ -31,6 +58,7 @@ $break-sm: 576px;
             font-size: 35px;
             color: $default;
             font-size: 35px;
+            color: #fff;
             cursor: pointer;
             transition: .3s;
             &:hover {
@@ -39,8 +67,8 @@ $break-sm: 576px;
             }
         }
         .footer-carousel-partners {
-            width: 85%;
-            min-height: 120px;
+            width: 95%;
+            min-height: 200px;
             position: relative;
             overflow: hidden;
             .footer-carousel-wrapper {
@@ -49,10 +77,11 @@ $break-sm: 576px;
                 position: absolute;
                 left: 0;
                 top: 0;
+                display: flex;
+                align-items: center;
                 .footer-each-item {
                     width: 6%;
                     height: 100px;
-                    background-color: #FBFBFB;
                     margin: 10px .325%;
                     box-sizing: box-shadow;
                     float: left;
@@ -60,37 +89,39 @@ $break-sm: 576px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    transition: .3s;
                     cursor: pointer;
-                    &:hover {
-                        transform: scale(1.05);
+                    transition: 1s;
+                    &:hover > span {
+                        display:block;
+                    }
+                    span {
+                        width: 100%;
+                        position: absolute;
+                        height: 25px;
+                        bottom: -55px;
+                        left: 0;
+                        text-align: center;
+                        color:#fff;
+                        display:none;
+                        font-weight: bold;
                     }
                     img {
-                        max-width: 75%;
+                        background-color: #fff;
+                        border-radius: 50%;
+                        max-width: 100%;
+                        transition: .3s;
+                        opacity: .85;
+                        transform: scale(1.15);
+                        &:hover {
+                            transform: scale(1.55);
+                            opacity: 1;
+                            opacity: 1;
+                            box-shadow: 0 0 3px #fff;
+                        }
                     }
                 }
             }
         }
-    }
-    .partners-next {
-        color: #037ef3;
-        font-size: 25px;
-        padding: 35px 10px;
-        position: relative;
-        cursor: pointer;
-        float: left;
-        top: -76px;
-        left: -25px;
-    }
-    .partners-prev {
-        color: #037ef3;
-        font-size: 25px;
-        padding: 35px 10px;
-        position: relative;
-        cursor: pointer;
-        float: right;
-        top: -76px;
-        right: -25px;
     }
 }
 
@@ -211,6 +242,9 @@ footer {
             margin: 0px 8px;
         }
     }
+    .partners #footer-carousel .footer-carousel-partners .footer-carousel-wrapper .footer-each-item img {
+        transform: scale(1)
+    }
 }
 
 @media only screen and (max-width: $break-sm) {
@@ -225,122 +259,10 @@ footer {
 }
 
 @media only screen and (min-width: 390px) {
-    .partners {
-        .footer-carousel {
-            .partners-next {
-                top: -83px;
-            }
-            .partners-prev {
-                top: -83px;
-            }
-        }
-        .bg-footer {
-            .bg-footer-group {
-                .footer-group-links {
-                    width: 50%;
-                }
-            }
-        }
-    }
-}
-
-@media only screen and (min-width: 449px) {
-    .partners {
-        .footer-carousel {
-            .partners-next {
-                top: -83px;
-            }
-            .partners-prev {
-                top: -83px;
-            }
-        }
-    }
-}
-
-@media only screen and (min-width: 475px) {
-    .partners {
-        .footer-carousel {
-            .partners-next {
-                top: -88px;
-            }
-            .partners-prev {
-                top: -88px;
-            }
-        }
-    }
-}
-
-@media only screen and (min-width: 520px) {
-    .partners {
-        .footer-carousel {
-            .partners-next {
-                top: -97px;
-            }
-            .partners-prev {
-                top: -97px;
-            }
-        }
-    }
-}
-
-@media only screen and (min-width: 576px) {
-    .partners {
-        .footer-carousel {
-            .partners-carousel {
-                width: 470px;
-            }
-            .partners-flex {
-                .partners-item {
-                    padding: 0 5px;
-                }
-            }
-            .partners-next {
-                top: -97px;
-            }
-            .partners-prev {
-                top: -97px;
-            }
-        }
-    }
-}
-
-@media only screen and (min-width: 768px) {
-    .partners {
-        .footer-carousel {
-            .partners-carousel {
-                width: 580px;
-            }
-            .partners-flex {
-                .partners-item {
-                    padding: 0 8px;
-                }
-            }
-            .partners-next {
-                top: -103px;
-            }
-            .partners-prev {
-                top: -103px;
-            }
-        }
-    }
-}
-
-@media only screen and (min-width: 992px) {
-    .partners {
-        .footer-carousel {
-            .partners-carousel {
-                width: 700px;
-            }
-            .partners-flex {
-                .partners-item {
-                    padding: 0 20px;
-                }
-            }
-            .partners-next {
-                top: -102px;
-            }
-            .partners-prev {
-                top: -102px;
+    .bg-footer {
+        .bg-footer-group {
+            .footer-group-links {
+                width: 50%;
             }
         }
     }
