--- a/src/app/form-gt/form-gt.component.scss
+++ b/src/app/form-gt/form-gt.component.scss
@@ -50,7 +50,7 @@
 }
 
 .loading-animation-gt {
-    background-image: url('../../assets/images/sent-gt.png');
+    background-image: url('/assets/images/sent-gt.png');
     background-size: 50%;
     background-position: center center;
     background-repeat: no-repeat;
@@ -216,7 +216,7 @@ select:focus {
     border: 0 !important;
     /*hide default down arrow in webkit */
     -webkit-appearance: none;
-    background-image: url('../../assets/images/select.png');
+    background-image: url('/assets/images/select.png');
     background-size: 13px;
     background-repeat: no-repeat;
     background-position: right center;
@@ -1469,7 +1469,7 @@ label {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    background-image: url('../../assets/images/logo-talentos-globais.png');
+    background-image: url('/assets/images/logo-talentos-globais.png');
     margin: auto
 }
 
